grafana-prometheus/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus
  annotations:
  # type of authentication
  #  nginx.ingress.kubernetes.io/auth-type: basic
  # your secret with user credentials
  #  nginx.ingress.kubernetes.io/auth-secret: basic-auth
  # message to display
  #  nginx.ingress.kubernetes.io/auth-realm: 'Please authenticate first'
spec:
  ingressClassName: nginx
  rules:
    - host:  <host fqdn>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090

    # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      -  <host fqdn>
      secretName: <tlscert>
