grafana-prometheus/ingress.grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: prometheus

spec:
  ingressClassName: nginx
  rules:
    - host:  <host>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80

    # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      -  <host>
      secretName: <tlscert>
